@@ -75,6 +75,10 @@ public class ResultSetUtil {
       return "character";
     case DATE:
       return "date";
+    case TIMESTAMP:
+      return "timestamp";
+    case TIME:
+      return "time";
     case VARCHAR:
       return "varchar";
     case TEXT:
@@ -103,7 +107,11 @@ public class ResultSetUtil {
     case NUMERIC:
       return Types.NUMERIC;
     case DATE:
+      return Types.DATE;
+    case TIMESTAMP:
       return Types.TIMESTAMP;
+    case TIME:
+      return Types.TIME;
     case VARCHAR:
       return Types.VARCHAR;
     case TEXT:
